# nonebot-plugin-waiter

./: README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-merge.yml  ruff.yml
src/nonebot_plugin_waiter/: __init__.py  config.py  unimsg.py
